--- a/landing page.html
+++ b/landing page.html
@@ -1,64 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samsung US | Mobile | TV | Home Electronics | Home Appliances | Samsung US</title>
-    <link href="landing page.css" type="text/css" rel="stylesheet">
-    <link href="samsung.png" rel="icon">
-</head>
-<html>
-  <body>
-    <div class="navbar">
-      <div>
-        <svg width="121" height="32" viewBox="0 0 121 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M8.42665 22.4189C8.59175 23.1403 8.5394 24.0648 8.45886 24.6251C8.31792 25.6196 7.93135 26.6351 6.78772 26.6351C5.71658 26.6351 5.06423 25.5566 5.06423 23.9317V21.0392H0.461548V23.3364C0.461548 29.9899 3.4696 32 6.69511 32C9.79578 32 12.3488 30.165 12.7555 25.1854C12.9649 22.608 12.8119 20.9201 12.7394 20.2968C12.0146 14.0495 5.50719 12.1865 5.01994 8.69161C4.95228 8.17623 4.94679 7.64204 5.00383 7.12278C5.12464 6.16327 5.49913 5.11972 6.57027 5.11972C7.57698 5.11972 8.16088 6.19829 8.16088 7.82315V9.67213H12.4414V7.57102C12.4414 1.07157 9.08705 0.0560303 6.66289 0.0560303C3.61054 0.0560303 1.11792 1.81396 0.66289 6.68155C0.542085 8.01225 0.521951 9.20288 0.703159 10.7017C1.44813 16.7949 7.54074 18.5598 8.42665 22.4189Z" fill="#000000"/>
-          <path d="M18.824 1.00859L15.6428 30.8374H20.2777L22.6253 3.76805H22.722L25.0052 30.8374H29.6159L26.4548 1.00159L18.824 1.00859ZM44.7367 1.00859L42.6226 23.8127H42.522L40.4119 1.00859H33.4173L33.0387 30.8374H37.3314L37.436 4.02019H37.5327L40.3958 30.8374H44.7488L47.6159 4.02719H47.7085L47.8173 30.8374H52.1059L51.7273 1.00159L44.7367 1.00859Z" fill="#000000"/>
-          <path d="M64.1864 22.3629C64.3515 23.0842 64.2991 24.0087 64.2186 24.569C64.0776 25.5636 63.6911 26.5791 62.5474 26.5791C61.4763 26.5791 60.8239 25.5005 60.8239 23.8757V20.9831H56.2213V23.2804C56.2213 29.9339 59.2293 31.9439 62.4548 31.9439C65.5555 31.9439 68.1085 30.109 68.5152 25.1293C68.7246 22.552 68.5716 20.8641 68.4991 20.2407C67.7743 13.9934 61.2669 12.1304 60.7796 8.63558C60.712 8.1202 60.7065 7.58601 60.7635 7.06675C60.8843 6.10724 61.2588 5.06369 62.33 5.06369C63.3367 5.06369 63.9206 6.14226 63.9206 7.76712V9.6161H68.2011V7.51499C68.2011 1.01554 64.8468 0 62.4226 0C59.3702 0 56.8776 1.75793 56.4226 6.62552C56.3018 7.95622 56.2817 9.14685 56.4629 10.6456C57.2078 16.7389 63.3004 18.5038 64.1864 22.3629Z" fill="#000000"/>
-          <path d="M78.5824 26.3689C79.7743 26.3689 80.1408 24.9402 80.2253 24.2118C80.2616 23.8896 80.2656 23.4554 80.2656 23.0702V1.00848H84.6065V22.3908C84.6073 23.0451 84.5939 23.6993 84.5663 24.3519C84.2642 29.9198 81.7354 31.7268 78.5824 31.7268C75.4253 31.7268 72.8965 29.9198 72.5944 24.3519C72.5824 24.0577 72.5502 22.9371 72.5542 22.3908V1.00147H76.8951V23.0632C76.8911 23.4554 76.8991 23.8896 76.9354 24.2118C77.0159 24.9402 77.3864 26.3689 78.5824 26.3689ZM99.5542 1.00848L99.7877 24.4219H99.6951L95.7488 1.00848H89.3864V30.5221H93.6025L93.3689 6.29628H93.4616L97.6938 30.5221H103.803V1.00848H99.5542ZM114.353 26.0608C115.593 26.0608 116.028 24.695 116.105 23.8896C116.141 23.5604 116.145 23.1402 116.145 22.769V18.4267H114.385V14.0844H120.462V22.0827C120.462 22.643 120.454 23.0492 120.401 24.0437C120.119 29.4786 117.409 31.4186 114.369 31.4186C111.329 31.4186 108.623 29.4786 108.337 24.0437C108.288 23.0492 108.276 22.643 108.276 22.0827V9.532C108.276 8.99971 108.317 8.06122 108.349 7.57096C108.731 1.989 111.329 0.196045 114.369 0.196045C117.409 0.196045 120.075 1.97499 120.389 7.56395C120.445 8.51646 120.429 9.52499 120.429 9.52499V10.5265H116.105V8.85264C116.105 8.85264 116.105 8.15227 116.052 7.71803C115.972 7.05969 115.649 5.54688 114.337 5.54688C113.088 5.54688 112.722 6.98264 112.629 7.71803C112.577 8.11024 112.557 8.64253 112.557 9.12578V22.762C112.557 23.1402 112.565 23.5604 112.597 23.8966C112.678 24.695 113.113 26.0608 114.353 26.0608Z" fill="#000000"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Samsung US | Mobile | TV | Home Electronics | Home Appliances | Samsung US
+    </title>
+    <link href="landing page.css" type="text/css" rel="stylesheet" />
+    <link href="samsung.png" rel="icon" />
+  </head>
+  <html>
+    <body>
+      <div class="navbar">
+        <div>
+          <svg
+            width="121"
+            height="32"
+            viewBox="0 0 121 32"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M8.42665 22.4189C8.59175 23.1403 8.5394 24.0648 8.45886 24.6251C8.31792 25.6196 7.93135 26.6351 6.78772 26.6351C5.71658 26.6351 5.06423 25.5566 5.06423 23.9317V21.0392H0.461548V23.3364C0.461548 29.9899 3.4696 32 6.69511 32C9.79578 32 12.3488 30.165 12.7555 25.1854C12.9649 22.608 12.8119 20.9201 12.7394 20.2968C12.0146 14.0495 5.50719 12.1865 5.01994 8.69161C4.95228 8.17623 4.94679 7.64204 5.00383 7.12278C5.12464 6.16327 5.49913 5.11972 6.57027 5.11972C7.57698 5.11972 8.16088 6.19829 8.16088 7.82315V9.67213H12.4414V7.57102C12.4414 1.07157 9.08705 0.0560303 6.66289 0.0560303C3.61054 0.0560303 1.11792 1.81396 0.66289 6.68155C0.542085 8.01225 0.521951 9.20288 0.703159 10.7017C1.44813 16.7949 7.54074 18.5598 8.42665 22.4189Z"
+              fill="white"
+            />
+            <path
+              d="M18.824 1.00859L15.6428 30.8374H20.2777L22.6253 3.76805H22.722L25.0052 30.8374H29.6159L26.4548 1.00159L18.824 1.00859ZM44.7367 1.00859L42.6226 23.8127H42.522L40.4119 1.00859H33.4173L33.0387 30.8374H37.3314L37.436 4.02019H37.5327L40.3958 30.8374H44.7488L47.6159 4.02719H47.7085L47.8173 30.8374H52.1059L51.7273 1.00159L44.7367 1.00859Z"
+              fill="white"
+            />
+            <path
+              d="M64.1864 22.3629C64.3515 23.0842 64.2991 24.0087 64.2186 24.569C64.0776 25.5636 63.6911 26.5791 62.5474 26.5791C61.4763 26.5791 60.8239 25.5005 60.8239 23.8757V20.9831H56.2213V23.2804C56.2213 29.9339 59.2293 31.9439 62.4548 31.9439C65.5555 31.9439 68.1085 30.109 68.5152 25.1293C68.7246 22.552 68.5716 20.8641 68.4991 20.2407C67.7743 13.9934 61.2669 12.1304 60.7796 8.63558C60.712 8.1202 60.7065 7.58601 60.7635 7.06675C60.8843 6.10724 61.2588 5.06369 62.33 5.06369C63.3367 5.06369 63.9206 6.14226 63.9206 7.76712V9.6161H68.2011V7.51499C68.2011 1.01554 64.8468 0 62.4226 0C59.3702 0 56.8776 1.75793 56.4226 6.62552C56.3018 7.95622 56.2817 9.14685 56.4629 10.6456C57.2078 16.7389 63.3004 18.5038 64.1864 22.3629Z"
+              fill="white"
+            />
+            <path
+              d="M78.5824 26.3689C79.7743 26.3689 80.1408 24.9402 80.2253 24.2118C80.2616 23.8896 80.2656 23.4554 80.2656 23.0702V1.00848H84.6065V22.3908C84.6073 23.0451 84.5939 23.6993 84.5663 24.3519C84.2642 29.9198 81.7354 31.7268 78.5824 31.7268C75.4253 31.7268 72.8965 29.9198 72.5944 24.3519C72.5824 24.0577 72.5502 22.9371 72.5542 22.3908V1.00147H76.8951V23.0632C76.8911 23.4554 76.8991 23.8896 76.9354 24.2118C77.0159 24.9402 77.3864 26.3689 78.5824 26.3689ZM99.5542 1.00848L99.7877 24.4219H99.6951L95.7488 1.00848H89.3864V30.5221H93.6025L93.3689 6.29628H93.4616L97.6938 30.5221H103.803V1.00848H99.5542ZM114.353 26.0608C115.593 26.0608 116.028 24.695 116.105 23.8896C116.141 23.5604 116.145 23.1402 116.145 22.769V18.4267H114.385V14.0844H120.462V22.0827C120.462 22.643 120.454 23.0492 120.401 24.0437C120.119 29.4786 117.409 31.4186 114.369 31.4186C111.329 31.4186 108.623 29.4786 108.337 24.0437C108.288 23.0492 108.276 22.643 108.276 22.0827V9.532C108.276 8.99971 108.317 8.06122 108.349 7.57096C108.731 1.989 111.329 0.196045 114.369 0.196045C117.409 0.196045 120.075 1.97499 120.389 7.56395C120.445 8.51646 120.429 9.52499 120.429 9.52499V10.5265H116.105V8.85264C116.105 8.85264 116.105 8.15227 116.052 7.71803C115.972 7.05969 115.649 5.54688 114.337 5.54688C113.088 5.54688 112.722 6.98264 112.629 7.71803C112.577 8.11024 112.557 8.64253 112.557 9.12578V22.762C112.557 23.1402 112.565 23.5604 112.597 23.8966C112.678 24.695 113.113 26.0608 114.353 26.0608Z"
+              fill="white"
+            />
           </svg>
+        </div>
+        <div class="butter-1">
+          <button class="button1">shop</button>
+          <button class="button1">mobile</button>
+          <button class="button1">tv & audio</button>
+          <button class="button1">Appliances</button>
+          <button class="button1">computing</button>
+          <button class="button1">displays</button>
+          <button class="button1">accessories</button>
+          <button class="button1">smartthings</button>
+        </div>
+        <div class="butter-2">
+          <button class="button2">explore</button>
+          <button class="button2">support</button>
+          <button class="button2">for business</button>
+        </div>
+        <div class="nav-img">
+          <a href="">
+            <img class="img1" src="search-interface-symbol.png" />
+          </a>
+          <a href="">
+            <img class="img1" src="shopping-cart (1).png" />
+          </a>
+          <a href="">
+            <img class="img1" src="account.png" />
+          </a>
+        </div>
       </div>
-      <div class="butter-1">
-        <button class="button1">shop</button>
-        <button class="button1">mobile</button>
-        <button class="button1">tv & audio</button>
-        <button class="button1">Appliances</button>
-        <button class="button1">computing</button>
-        <button class="button1">displays</button>
-        <button class="button1">accessories</button>
-        <button class="button1">smartthings</button>
+      <div>
+        <img class="img2" src="oled tv.webp" />
+        <div class="description">
+          <h2 class="big">1 <sup>st</sup> Dual UHD <br />Gaming Monitor</h2>
+          <p class="small">Transform your game with 57&quot; Odyssey Neo G9.</p>
+          <a href="#" class="button3">buy now</a>
+        </div>
       </div>
-      <div class="butter-2">
-        <button class="button2">explore</button>
-        <button class="button2">support</button>
-        <button class="button2">for business</button>
+      <div>
+        <div class="tfo">
+          <h2 class="shop">Shop all latest offers and innovations</h2>
+        </div>
+        <div class="butter-3">
+          <button class="button4">for you</button>
+          <button class="button4">mobile & tablets</button>
+          <button class="button4">tv & computing</button>
+          <button class="button4">home appliances</button>
+          <button class="button4">samsung live</button>
+          <button class="button4">for business</button>
+        </div>
+        <div class="down-content">
+          <div class="img3">
+            <h2>galaxy s23</h2>
+            <h3>799.99$</h3>
+            <a href="">buy now</a>
+            <img class="img3-3" src="galaxy.jpg" />
+          </div>
+          <div class="img4">
+            <h2>tab 7</h2>
+            <h3>399.99$</h3>
+            <a href="">buy now</a>
+            <img
+              class="img4-4"
+              src="tablette-galaxy-tab-s7-128gb-samsung.webp"
+            />
+          </div>
+          <div class="img5">
+            <h2>galaxy buds</h2>
+            <h3>99.99$</h3>
+            <a href="">buy now</a>
+            <img class="img5-5" src="airpods.webp" />
+          </div>
+        </div>
+        <div class="tvs">
+          <h1>TV</h1>
+        <div class="tv-audio">
+          <h2 class="tv-text">65" Q80C QLED 4K (2023)</h2>
+          <h3 class="tv-text">2000$</h3>
+          <img class="tv-qled" src="tv.png" alt="la" />
+          <a href="">buy now</a>
+        </div>
+        </div>
       </div>
-      <div class="nav-img">
-        <a href=""><img class="img1" src="search-interface-symbol.png"></a>
-        <a href=""><img class="img1" src="shopping-cart (1).png"></a>
-        <a href=""><img class="img1" src="account.png"></a>
-      </div>
-    </div>
-
-    <div>
-      <img class="img2" src="oled tv.webp">
-      <div class="description">
-        <h2 class="big">1<sup>st</sup> Dual UHD <br>Gaming Monitor</h2>
-        <p class="small">Transform your game with 57&quot; Odyssey Neo G9.</p>
-        <button class="button3">buy now</button>
-      </div>
-    </div>
-    <div>
-      <h2 class="shop">Shop all latest offers and innovations</h2>
-      <div class="butter-3">
-        <button class="button4">for you</button>
-        <button class="button4">mobile & tablets</button>
-        <button class="button4">tv & computing</button>
-        <button class="button4">home appliances</button>
-        <button class="button4">samsung live</button>
-        <button class="button4">for business</button>
-      </div>
-    </div>
-
-  </body>
+    </body>
+  </html>
 </html>
