--- a/landing page.html
+++ b/landing page.html
@@ -110,12 +110,23 @@
         </div>
         <div class="tvs">
           <h1>TV</h1>
-        <div class="tv-audio">
-          <h2 class="tv-text">65" Q80C QLED 4K (2023)</h2>
-          <h3 class="tv-text">2000$</h3>
-          <img class="tv-qled" src="tv.png" alt="la" />
-          <a href="">buy now</a>
+          <div class="tv-audio">
+            <h2 class="tv-text">65" Q80C QLED 4K (2023)</h2>
+            <h3 class="tv-text">2000$</h3>
+            <img class="tv-qled" src="tv.png" alt="la" />
+            <a href="">buy now</a>
+          </div>
         </div>
+        <div class="ad">
+          <a href="">
+            <img
+              class="ad1"
+              src="ad.png"
+              width="1200px"
+              height="100px"
+              alt=""
+            />
+          </a>
         </div>
       </div>
     </body>
